codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__session_info_deepseek_login_tooltip_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
╭─────────────────────────────────────────────────╮
│ >_ DCode (v0.1.1)                               │
│                                                 │
│ model:     deepseek-v4-flash   /model to change │
│ directory: /tmp/project                         │
╰─────────────────────────────────────────────────╯

  Tip: Use /login to add or replace your DeepSeek API key.
